--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 PROJECT(myframe_pb)
 
+#### compile setting
+SET(CMAKE_C_STANDARD 11)
+SET(CMAKE_CXX_STANDARD 17)
+SET(CMAKE_CXX_STANDARD_REQUIRED YES)
+SET(CMAKE_C_FLAGS "-fPIC -DPIC -DNDEBUG")
+SET(CMAKE_CXX_FLAGS "-fPIC -DPIC -DNDEBUG")
+
+#### path setting
 SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}/myframe")
+SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 SET(MYFRAME_ROOT ${CMAKE_INSTALL_PREFIX})
 SET(MYFRAME_INSTALL_LIB_DIR ${MYFRAME_ROOT}/lib)
 SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/inc)
