--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}/myframe")
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 SET(MYFRAME_ROOT ${CMAKE_INSTALL_PREFIX})
 SET(MYFRAME_INSTALL_LIB_DIR ${MYFRAME_ROOT}/lib)
-SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/inc)
+SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/include)
 
 FIND_PACKAGE(Protobuf REQUIRED)
 
