--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,23 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
-PROJECT(myframe_pb)
+cmake_minimum_required(VERSION 3.10)
+if (POLICY CMP0091)
+  cmake_policy(SET CMP0091 NEW)
+endif()
+project(myframe_pb VERSION 0.1.2)
 
-#### compile setting
-SET(CMAKE_C_STANDARD 11)
-SET(CMAKE_CXX_STANDARD 17)
-SET(CMAKE_CXX_STANDARD_REQUIRED YES)
-SET(CMAKE_C_FLAGS "-fPIC -DPIC -DNDEBUG")
-SET(CMAKE_CXX_FLAGS "-fPIC -DPIC -DNDEBUG")
+#### cmake module
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
+#### compile option
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED YES)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/source-charset:utf-8>")
 
 #### path setting
-SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}/myframe")
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 SET(MYFRAME_ROOT ${CMAKE_INSTALL_PREFIX})
 SET(MYFRAME_INSTALL_LIB_DIR ${MYFRAME_ROOT}/lib)
-SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/include)
+SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/include/myframe_pb)
 
 FIND_PACKAGE(Protobuf REQUIRED)
 
@@ -37,7 +41,7 @@ INSTALL(TARGETS
     ARCHIVE DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
     RUNTIME DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
 )
-INSTALL(DIRECTORY proto DESTINATION ${MYFRAME_ROOT})
+INSTALL(DIRECTORY proto DESTINATION ${MYFRAME_INSTALL_HEADER_DIR})
 INSTALL(FILES
     ${PROTO_HDRS}
     PERMISSIONS
