add cmake config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,35 +14,40 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/source-charset:utf-8>")
 
 #### path setting
-SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-SET(MYFRAME_ROOT ${CMAKE_INSTALL_PREFIX})
-SET(MYFRAME_INSTALL_LIB_DIR ${MYFRAME_ROOT}/lib)
-SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/include/myframe_pb)
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+set(MYFRAME_INSTALL_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib)
+set(MYFRAME_INSTALL_HEADER_DIR ${CMAKE_INSTALL_PREFIX}/include/myframe_pb)
 
-FIND_PACKAGE(Protobuf REQUIRED)
+find_package(Protobuf REQUIRED)
 
-INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${Protobuf_INCLUDE_DIRS})
 
 ### PROTO
-FILE(GLOB proto_files "proto/*.proto")
+file(GLOB proto_files "proto/*.proto")
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${proto_files})
 
-ADD_LIBRARY(myframe_pb SHARED ${PROTO_SRCS} ${PROTO_HDRS})
-TARGET_LINK_LIBRARIES(myframe_pb
-    ${Protobuf_LIBRARIES})
-TARGET_INCLUDE_DIRECTORIES(myframe_pb
-    PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+add_library(myframe_pb SHARED ${PROTO_SRCS} ${PROTO_HDRS})
+target_link_libraries(myframe_pb
+    PUBLIC
+    ${Protobuf_LIBRARIES}
+)
+target_include_directories(myframe_pb
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    INTERFACE
+    $<INSTALL_INTERFACE:include>
+)
 
 ### install
-INSTALL(TARGETS
+install(TARGETS
     myframe_pb
+    EXPORT "${PROJECT_NAME}Targets"
     LIBRARY DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
     ARCHIVE DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
     RUNTIME DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
 )
-INSTALL(DIRECTORY proto DESTINATION ${MYFRAME_INSTALL_HEADER_DIR})
-INSTALL(FILES
+install(DIRECTORY proto DESTINATION ${MYFRAME_INSTALL_HEADER_DIR})
+install(FILES
     ${PROTO_HDRS}
     PERMISSIONS
     OWNER_READ
@@ -50,3 +55,5 @@ INSTALL(FILES
     WORLD_READ
     DESTINATION ${MYFRAME_INSTALL_HEADER_DIR}
 )
+
+include(InstallingConfigs)
